<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboard"
        android:title="Tomato Diseases"
        android:contentDescription="@string/menu_dashboard"
        android:icon="@drawable/ic_dashboard_white_24dp"/>

    <item
        android:id="@+id/second_fragment"
        android:title="Scan Disease"
        android:contentDescription="@string/menu_leaderboard"
        />

<!--    <item-->
<!--        android:id="@+id/third_fragment"-->
<!--        android:title="@string/menu_store"-->
<!--        android:contentDescription="@string/menu_store"-->
<!--        android:icon="@drawable/ic_store_white_24dp"/>-->


    <item
        android:id="@+id/fourth_fragment"
        android:title="@string/menu_profile"
        android:contentDescription="@string/menu_profile"
        android:icon="@drawable/ic_person_outline_white_24dp"/>

<!--    <item-->
<!--        android:id="@+id/fifth_fragment"-->
<!--        android:title="Practices"-->
<!--        android:contentDescription="@string/menu_store"-->
<!--        android:icon="@drawable/ic_store_white_24dp"/>-->
</menu>